# zverse

./: Cargo.toml  IMPLEMENTATION_STATUS.md  LARGE_SCALE_TESTING.md  LARGE_SCALE_TEST_README.md  LOCKFREE_PERFORMANCE.md  LOCK_FREE_SOLUTION.md  MASTER_CLASS_ARCHITECTURE.md  README.md  SIMPLE_ZCURVE_DESIGN.md  architecture.md
benches/: README.md  benchmarks.rs  master_class_bench.rs  temporal_db_bench.rs  temporal_versioning.rs
design/: CORE.md  IMEC_CORE.md  LOCKFREE_MORTON_TEMPORAL_DATABASE.md
examples/: arena_morton_large_scale_benchmark.rs  arena_morton_zero_coord.rs  basic_storage.rs  fast_mvcc_demo.rs  file_kv_benchmark.rs  file_storage_benchmark.rs  fractional_morton_benchmark.rs  large_scale_temporal_demo.rs  lock_free_comparison.rs  lockfree_benchmark.rs  lockfree_demo.rs  lockfree_mvcc_demo.rs  lockfree_storage_large_scale_benchmark.rs  lockfree_versioned_morton_benchmark.rs  mmap_minimal.rs  mmap_test.rs  morton_vart_benchmark.rs  morton_vart_final_demo.rs  morton_vart_proof_of_concept.rs  mvcc_demo.rs  persistent.rs  simple.rs  simple_kv_demo.rs  simple_multithreaded.rs  simple_singlethreaded.rs  temporal_demo.rs  ultra_fast_benchmark.rs  ultra_fast_simple_test.rs
src/: core.rs  engine.rs  inmemory.rs  interleaved_key.rs  lib.rs  locality.rs  lockfree.rs  lockfree_zverse.rs  main.rs  master_class.rs  master_class_stress_tests.rs  mmap_storage.rs  morton.rs  persistent_zverse.rs  query.rs  storage.rs  zcurve_db.rs
src/encoding/: mod.rs  morton.rs  utf8.rs
src/interval/: mod.rs  table.rs
src/storage/: engine.rs  extent.rs  file.rs  file_engine.rs  lockfree_engine.rs  lockfree_file.rs  lockfree_mvcc.rs  mod.rs  morton_vart_hybrid.rs  page.rs  temporal_engine.rs  transaction.rs  transactional_engine.rs  ultra_fast_engine.rs
