[package]
name = "zverse"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9"
byteorder = "1.5"
parking_lot = "0.12"
crossbeam-utils = "0.8"
dashmap = "5.5"
rand = "0.8"
smallvec = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"
